Creato con Colab

--- a/CLIP_zero_shot.ipynb
+++ b/CLIP_zero_shot.ipynb
@@ -13,11 +13,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "UzXtFjhh7iOS"
+        "id": "UzXtFjhh7iOS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d41894d9-ff85-4a20-ab59-c1f8f10ac2be"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting openai_clip\n",
+            "  Downloading openai-clip-1.0.1.tar.gz (1.4 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m12.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting ftfy (from openai_clip)\n",
+            "  Downloading ftfy-6.3.1-py3-none-any.whl.metadata (7.3 kB)\n",
+            "Requirement already satisfied: regex in /usr/local/lib/python3.11/dist-packages (from openai_clip) (2024.11.6)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from openai_clip) (4.67.1)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.11/dist-packages (from ftfy->openai_clip) (0.2.13)\n",
+            "Downloading ftfy-6.3.1-py3-none-any.whl (44 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.8/44.8 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: openai_clip\n",
+            "  Building wheel for openai_clip (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for openai_clip: filename=openai_clip-1.0.1-py3-none-any.whl size=1368605 sha256=2b30bc220fd68831ec75c66bf1d690333b4e00bafb5db986c3c2b54e6d6d6415\n",
+            "  Stored in directory: /root/.cache/pip/wheels/0d/17/90/042948fd2e2a87f1dcf6db6d438cad015c49db0c53d1d9c7dc\n",
+            "Successfully built openai_clip\n",
+            "Installing collected packages: ftfy, openai_clip\n",
+            "Successfully installed ftfy-6.3.1 openai_clip-1.0.1\n"
+          ]
+        }
+      ],
       "source": [
         "# we need to install clip as it is not pre-installed\n",
         "# you are also free to use open_clip which provide more models\n",
@@ -27,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "QtqdSOr8qqOn"
       },
@@ -51,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "M_1CrUhZpVCq"
       },
@@ -85,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "nfq51vd8q_5a"
       },
@@ -120,18 +149,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "veGGpNDctCgR",
-        "outputId": "72b17648-b4ee-42da-eb6e-37dfef3ef2f6"
+        "outputId": "e4a21471-dd01-4aa7-b9a7-eb32dfa3a794"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 345M/345M [00:31<00:00, 11.0MB/s]\n",
+            "100%|██████████| 502/502 [00:00<00:00, 718kB/s]\n",
+            "100%|██████████| 15.0k/15.0k [00:00<00:00, 23.0MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Base Class Names: [(0, 'pink primrose'), (1, 'hard-leaved pocket orchid'), (2, 'canterbury bells'), (3, 'sweet pea'), (4, 'english marigold'), (5, 'tiger lily'), (6, 'moon orchid'), (7, 'bird of paradise'), (8, 'monkshood'), (9, 'globe thistle'), (10, 'snapdragon'), (11, \"colt's foot\"), (12, 'king protea'), (13, 'spear thistle'), (14, 'yellow iris'), (15, 'globe-flower'), (16, 'purple coneflower'), (17, 'peruvian lily'), (18, 'balloon flower'), (19, 'giant white arum lily'), (20, 'fire lily'), (21, 'pincushion flower'), (22, 'fritillary'), (23, 'red ginger'), (24, 'grape hyacinth'), (25, 'corn poppy'), (26, 'prince of wales feathers'), (27, 'stemless gentian'), (28, 'artichoke'), (29, 'sweet william'), (30, 'carnation'), (31, 'garden phlox'), (32, 'love in the mist'), (33, 'mexican aster'), (34, 'alpine sea holly'), (35, 'ruby-lipped cattleya'), (36, 'cape flower'), (37, 'great masterwort'), (38, 'siam tulip'), (39, 'lenten rose'), (40, 'barbeton daisy'), (41, 'daffodil'), (42, 'sword lily'), (43, 'poinsettia'), (44, 'bolero deep blue'), (45, 'wallflower'), (46, 'marigold'), (47, 'buttercup'), (48, 'oxeye daisy'), (49, 'common dandelion'), (50, 'petunia')]\n",
             "Novel Class Names: [(51, 'wild pansy'), (52, 'primula'), (53, 'sunflower'), (54, 'pelargonium'), (55, 'bishop of llandaff'), (56, 'gaura'), (57, 'geranium'), (58, 'orange dahlia'), (59, 'pink-yellow dahlia?'), (60, 'cautleya spicata'), (61, 'japanese anemone'), (62, 'black-eyed susan'), (63, 'silverbush'), (64, 'californian poppy'), (65, 'osteospermum'), (66, 'spring crocus'), (67, 'bearded iris'), (68, 'windflower'), (69, 'tree poppy'), (70, 'gazania'), (71, 'azalea'), (72, 'water lily'), (73, 'rose'), (74, 'thorn apple'), (75, 'morning glory'), (76, 'passion flower'), (77, 'lotus'), (78, 'toad lily'), (79, 'anthurium'), (80, 'frangipani'), (81, 'clematis'), (82, 'hibiscus'), (83, 'columbine'), (84, 'desert-rose'), (85, 'tree mallow'), (86, 'magnolia'), (87, 'cyclamen'), (88, 'watercress'), (89, 'canna lily'), (90, 'hippeastrum'), (91, 'bee balm'), (92, 'ball moss'), (93, 'foxglove'), (94, 'bougainvillea'), (95, 'camellia'), (96, 'mallow'), (97, 'mexican petunia'), (98, 'bromelia'), (99, 'blanket flower'), (100, 'trumpet creeper'), (101, 'blackberry lily')]\n"
@@ -159,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "msOszMs2zRRu"
       },
@@ -213,30 +251,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sh6uLZRT7YJx",
-        "outputId": "25ef91c9-9879-4f50-d1eb-d2c53c194498"
+        "outputId": "de1656f6-94eb-4a7d-eb08-1dc4373c7695"
       },
       "outputs": [
         {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|███████████████████████████████████████| 335M/335M [00:04<00:00, 81.8MiB/s]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Compose(\n",
               "    Resize(size=224, interpolation=bicubic, max_size=None, antialias=True)\n",
               "    CenterCrop(size=(224, 224))\n",
-              "    <function _convert_image_to_rgb at 0x7f1245867380>\n",
+              "    <function _convert_image_to_rgb at 0x7a96e2e27ba0>\n",
               "    ToTensor()\n",
               "    Normalize(mean=(0.48145466, 0.4578275, 0.40821073), std=(0.26862954, 0.26130258, 0.27577711))\n",
               ")"
             ]
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 7
         }
       ],
       "source": [
@@ -263,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "TVrYUYTv9ttM"
       },
@@ -292,26 +337,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uhblkvm9US4",
-        "outputId": "a8b36190-e0c5-401b-830b-9a48711d934f"
+        "outputId": "ce425cff-4048-4a85-a82c-9e9376220340"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "🧠 Zero-shot evaluation on Base Classes: 100%|██████████| 20/20 [00:20<00:00,  1.02s/it]\n",
-            "🧠 Zero-shot evaluation on Novel Classes: 100%|██████████| 29/29 [00:28<00:00,  1.01it/s]"
+            "🧠 Zero-shot evaluation on Base Classes: 100%|██████████| 20/20 [00:22<00:00,  1.15s/it]\n",
+            "🧠 Zero-shot evaluation on Novel Classes: 100%|██████████| 29/29 [00:27<00:00,  1.07it/s]"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "🔍 Base classes accuracy: 71.33%\n",
@@ -319,8 +364,8 @@
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "\n"
           ]
@@ -432,7 +477,105 @@
         "id": "CfzZ1Es-MwF5"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from torch.utils.data import DataLoader\n",
+        "visual_projection = model.visual.proj\n",
+        "\n",
+        "# Freeze all parameters in the model\n",
+        "for param in model.parameters():\n",
+        "    param.requires_grad = False\n",
+        "\n",
+        "# Unfreeze the projection layer\n",
+        "visual_projection.requires_grad = True\n",
+        "train_loader = DataLoader(train_base, batch_size=32, shuffle=True)\n",
+        "criterion = torch.nn.CrossEntropyLoss()\n",
+        "optimizer = Adam([visual_projection], lr=1e-4)\n",
+        "\n",
+        "\n",
+        "#training loop\n",
+        "for epoch in range(num_epochs):\n",
+        "    model.train()\n",
+        "    total_loss = 0\n",
+        "\n",
+        "    for images, labels in train_loader:\n",
+        "        images, labels = images.to(device), labels.to(device)\n",
+        "        text_inputs = clip.tokenize(\n",
+        "        [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]\n",
+        "    ).to(device)\n",
+        "\n",
+        "        # Forward pass through the visual encoder\n",
+        "        visual_features = model.visual(images)  # Features before projection layer\n",
+        "        visual_features = visual_feature/visual_features.norm(dim=-1, keepdim=True)\n",
+        "        text_features = model.encode_text(tokenized_labels)\n",
+        "        text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+        "\n",
+        "        # Project the features\n",
+        "        logits = visual_features @ text_features  # Ensure it's compatible with task\n",
+        "\n",
+        "        # Compute the loss\n",
+        "        loss = criterion(logits, labels)\n",
+        "        total_loss += loss.item()\n",
+        "\n",
+        "        # Backpropagation\n",
+        "        optimizer.zero_grad()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "    print(f\"Epoch {epoch + 1}, Loss: {total_loss / len(train_loader)}\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "##############################################################################\n",
+        "contig_cat2idx = {cat: idx for idx, cat in enumerate(categories)}\n",
+        "\n",
+        "    # here we apply the standard CLIP template used for oxford flowers to all categories\n",
+        "    # and immediately tokenize each sentence (convert natural language into numbers - feel free to print the text input to inspect them)\n",
+        "    text_inputs = clip.tokenize(\n",
+        "        [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]\n",
+        "    ).to(device)\n",
+        "\n",
+        "    # we can encode the text features once as they are shared for all images\n",
+        "    # therefore we do it outside the evaluation loop\n",
+        "    text_features = model.encode_text(text_inputs)\n",
+        "    # and here we normalize them (standard pratice with CLIP)\n",
+        "    text_features /= text_features.norm(dim=-1, keepdim=True) # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "    # simple dataloader creation\n",
+        "    dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
+        "\n",
+        "    # here we store the number of correct predictions we will make\n",
+        "    correct_predictions = 0\n",
+        "    for image, target in tqdm(dataloader, desc=label):\n",
+        "        # base categories range from 0 to 50, whil novel ones from 51 to 101\n",
+        "        # therefore we must map categories to the [0, 50], otherwise we will have wrong predictions\n",
+        "        # Map targets in contiguous set starting from zero\n",
+        "        # Labels needs to be .long() in pytorch\n",
+        "        target = torch.Tensor([contig_cat2idx[t.item()] for t in target]).long()\n",
+        "\n",
+        "        image = image.to(device)\n",
+        "        target = target.to(device)\n",
+        "\n",
+        "        # forward image through CLIP image encoder\n",
+        "        image_features = model.encode_image(image)\n",
+        "        # and normalize\n",
+        "        image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+        "\n",
+        "        # here cosine similarity between image and text features and keep the argmax for every row (every image)\n",
+        "        predicted_class = (image_features @ text_features.T).argmax(dim=-1)\n",
+        "        # now we check which are correct, and sum them (False == 0, True == 1)\n",
+        "        correct_predictions += (predicted_class == target).sum().item()\n",
+        "\n",
+        "    # and now we compute the accuracy\n",
+        "    accuracy = correct_predictions / len(dataset)\n",
+        "    return accuracy\n",
+        "\n",
+        "base_accuracy = eval(model=model, dataset=test_base, categories=base_classes, batch_size=128, device=device, label=\"🧠 Zero-shot evaluation on Base Classes\")\n",
+        "novel_accuracy = eval(model=model, dataset=test_novel, categories=novel_classes, batch_size=128, device=device, label=\"🧠 Zero-shot evaluation on Novel Classes\")\n",
+        "\n",
+        "print()\n",
+        "print(f\"🔍 Base classes accuracy: {base_accuracy*100:.2f}%\")\n",
+        "print(f\"🔍 Novel classes accuracy: {novel_accuracy*100:.2f}%\")\n"
+      ]
     }
   ],
   "metadata": {
