Creato con Colab

--- a/CLIP_zero_shot.ipynb
+++ b/CLIP_zero_shot.ipynb
@@ -455,95 +455,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 28,
       "metadata": {
         "id": "CfzZ1Es-MwF5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0dfd3b2a-23fc-4714-cd20-0449196de2c8"
+        "outputId": "e630d694-2959-4384-cd8e-c905cf059a30"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "🧠 Finetuining training on Base Classes:   6%|▋         | 2/32 [00:00<00:09,  3.08it/s]"
+            "🧠 Finetuining training on Base Classes:   6%|▋         | 2/32 [00:00<00:09,  3.11it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(3.8508, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8351, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+            "tensor(3.8388, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "tensor(3.8278, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r🧠 Finetuining training on Base Classes:   9%|▉         | 3/32 [00:00<00:07,  3.77it/s]"
+            "🧠 Finetuining training on Base Classes:  12%|█▎        | 4/32 [00:01<00:06,  4.27it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(3.8394, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8431, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+            "tensor(3.8506, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "tensor(3.8453, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "🧠 Finetuining training on Base Classes:  19%|█▉        | 6/32 [00:01<00:05,  4.77it/s]"
+            "\r🧠 Finetuining training on Base Classes:  12%|█▎        | 4/32 [00:01<00:09,  2.94it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(3.8119, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8236, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+            "tensor(3.8361, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "Epoch 1, Loss: 0.5999582335352898\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "🧠 Finetuining training on Base Classes:  25%|██▌       | 8/32 [00:01<00:04,  4.91it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor(3.8060, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8215, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r🧠 Finetuining training on Base Classes:  28%|██▊       | 9/32 [00:02<00:05,  4.44it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor(3.8193, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8011, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r🧠 Finetuining training on Base Classes:  28%|██▊       | 9/32 [00:02<00:06,  3.56it/s]\n"
+            "\n"
           ]
         }
       ],
@@ -574,32 +544,21 @@
         "\n",
         "criterion = torch.nn.CrossEntropyLoss()\n",
         "optimizer = Adam([visual_projection], lr=1e-4)\n",
-        "#optimizer = Adam(model.parameters(), lr=1e-4)\n",
         "\n",
         "\n",
         "##############################################\n",
         "\n",
         "contig_cat2idx = {cat: idx for idx, cat in enumerate(categories)}\n",
         "\n",
-        "#text_inputs = clip.tokenize(\n",
-        "#        [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]).to(device)\n",
+        "text_inputs = clip.tokenize(\n",
+        "        [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]).to(device)\n",
         "\n",
-        "#text_features = model.encode_text(text_inputs).float()\n",
+        "text_features = model.encode_text(text_inputs).float()\n",
         "# and here we normalize them (standard pratice with CLIP)\n",
-        "#text_feature_norm = text_features.norm(dim=-1, keepdim=True)\n",
-        "#text_features /= text_features.norm(dim=-1, keepdim=True) # per avere norma 1 per calcolare cosine similarity\n",
-        "#text_features = text_features/text_feature_norm\n",
-        "\n",
-        "with torch.no_grad():\n",
-        "    text_inputs = clip.tokenize(\n",
-        "        [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]\n",
-        "    ).to(device)\n",
-        "    text_features = model.encode_text(text_inputs).float()\n",
-        "    text_features = text_features / text_features.norm(dim=-1, keepdim=True).clamp(min=1e-6)\n",
+        "text_feature_norm = text_features.norm(dim=-1, keepdim=True)\n",
+        "text_features = text_features/text_feature_norm # per avere norma 1 per calcolare cosine similarity\n",
         "\n",
         "num_epochs= 1\n",
-        "\n",
-        "count = 0\n",
         "\n",
         "for epoch in range(num_epochs):\n",
         "\n",
@@ -615,22 +574,14 @@
         "\n",
         "        # forward image through CLIP image encoder\n",
         "        image_features = model.encode_image(image).float()\n",
-        "        #print(f\"Image: {image_features}\")\n",
         "        # and normalize\n",
         "        image_features_norm = image_features.norm(dim=-1, keepdim=True)\n",
-        "        image_features_norm = torch.clamp(image_features_norm, min=1e-6)\n",
-        "        image_features = image_features / image_features_norm\n",
-        "        #print(f\"Image: {image_features[0][0]}\")\n",
-        "        #image_features /= image_features.norm(dim=-1, keepdim=True)\n",
-        "        #image_features = image_features / image_features.norm(dim=-1, keepdim=True)\n",
-        "        #print(f\"Image: {image_features[0]}\")\n",
+        "        image_features = image_features / image_features_norm # per avere norma 1 per calcolare cosine similarity\n",
         "\n",
         "        # here cosine similarity between image and text features and keep the argmax for every row (every image)\n",
         "        logits = image_features @ text_features.T\n",
-        "        #print(logits[0])\n",
         "\n",
         "        loss = criterion(logits, target)\n",
-        "        print(loss)\n",
         "        total_loss += loss.item()\n",
         "\n",
         "        # Backpropagation\n",
@@ -638,9 +589,6 @@
         "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
         "        optimizer.step()\n",
         "        optimizer.zero_grad()\n",
-        "\n",
-        "        count += 1\n",
-        "        if count == 10: break\n",
         "\n",
         "  print(f\"Epoch {epoch + 1}, Loss: {total_loss/ len(dataloader)}\")"
       ]
