--- a/CLIP_zero_shot.ipynb
+++ b/CLIP_zero_shot.ipynb
@@ -251,22 +251,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sh6uLZRT7YJx",
-        "outputId": "52b73b15-b25e-47ac-eb2e-1c09bc2ee6aa"
+        "outputId": "3155ab75-699f-47f5-bb0c-7c75fb11b511"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|███████████████████████████████████████| 335M/335M [00:04<00:00, 74.4MiB/s]\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -281,7 +274,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 30
         }
       ],
       "source": [
@@ -337,20 +330,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uhblkvm9US4",
-        "outputId": "9c050818-d5cd-455f-9678-eb1bb4618aab"
+        "outputId": "f5ce1865-21e6-4217-ec72-690a76ac6f31"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r🧠 Zero-shot evaluation on Base Classes:   0%|          | 0/20 [00:00<?, ?it/s]"
+            "🧠 Zero-shot evaluation on Base Classes: 100%|██████████| 20/20 [00:21<00:00,  1.09s/it]\n",
+            "🧠 Zero-shot evaluation on Novel Classes: 100%|██████████| 29/29 [00:34<00:00,  1.17s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "🔍 Base classes accuracy: 71.33%\n",
+            "🔍 Novel classes accuracy: 78.24%\n"
           ]
         }
       ],
@@ -454,59 +457,165 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Fine-Tuning of the visual linear layer\n",
+        "\n",
+        "We fine-tune the last linear layer of the visual encoder for the classification of the base train data."
+      ],
+      "metadata": {
+        "id": "RDz9XS0DhxnL"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 32,
       "metadata": {
         "id": "CfzZ1Es-MwF5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e630d694-2959-4384-cd8e-c905cf059a30"
+        "outputId": "1adb8fd8-ba3e-422d-fe63-1a11abf4931f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "🧠 Finetuining training on Base Classes:   6%|▋         | 2/32 [00:00<00:09,  3.11it/s]"
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:08<00:00,  2.02s/it]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(3.8388, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8278, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+            "Epoch 1, Loss: 3.8320897817611694\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "🧠 Finetuining training on Base Classes:  12%|█▎        | 4/32 [00:01<00:06,  4.27it/s]"
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.86s/it]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(3.8506, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "tensor(3.8453, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+            "Epoch 2, Loss: 3.806214690208435\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r🧠 Finetuining training on Base Classes:  12%|█▎        | 4/32 [00:01<00:09,  2.94it/s]"
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.86s/it]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(3.8361, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "Epoch 1, Loss: 0.5999582335352898\n"
+            "Epoch 3, Loss: 3.7814478874206543\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.97s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 4, Loss: 3.758097529411316\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  2.00s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 5, Loss: 3.7377514243125916\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.92s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 6, Loss: 3.7190166115760803\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.94s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 7, Loss: 3.701944410800934\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.94s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 8, Loss: 3.686346173286438\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:08<00:00,  2.16s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 9, Loss: 3.6720839738845825\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Fine-tuning training on Base Classes: 100%|██████████| 4/4 [00:07<00:00,  1.95s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 10, Loss: 3.6593503952026367\n"
           ]
         },
         {
@@ -522,75 +631,122 @@
         "from torch.optim import Adam\n",
         "import torchvision.transforms as transforms\n",
         "\n",
+        "def fine_tuning_linear_visual(model, dataset, categories, batch_size, num_epochs, device, label):\n",
         "\n",
-        "categories = base_classes\n",
-        "dataset = train_base\n",
-        "batch_size = 16\n",
-        "label = \"🧠 Finetuining training on Base Classes\"\n",
-        "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
-        "#train_loader = DataLoader(train_base, batch_size=32, shuffle=True)\n",
+        "  dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
         "\n",
-        "model, _ = clip.load(\"ViT-B/16\", device=device)\n",
-        "model = model.float()\n",
+        "  model = model.float()\n",
         "\n",
-        "visual_projection = model.visual.proj\n",
+        "  visual_projection = model.visual.proj\n",
         "\n",
-        "# Freeze all parameters in the model\n",
-        "for param in model.parameters():\n",
-        "    param.requires_grad = False\n",
+        "  # Freeze all parameters in the model\n",
+        "  for param in model.parameters():\n",
+        "      param.requires_grad = False\n",
         "\n",
-        "# Unfreeze the projection layer\n",
-        "visual_projection.requires_grad = True\n",
+        "  # Unfreeze the projection layer\n",
+        "  visual_projection.requires_grad = True\n",
         "\n",
-        "criterion = torch.nn.CrossEntropyLoss()\n",
-        "optimizer = Adam([visual_projection], lr=1e-4)\n",
+        "  criterion = torch.nn.CrossEntropyLoss()\n",
+        "  optimizer = Adam([visual_projection], lr=1e-4)\n",
+        "\n",
+        "  contig_cat2idx = {cat: idx for idx, cat in enumerate(categories)}\n",
+        "\n",
+        "  text_inputs = clip.tokenize(\n",
+        "          [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]).to(device)\n",
+        "\n",
+        "  text_features = model.encode_text(text_inputs).float()\n",
+        "  # and here we normalize them (standard pratice with CLIP)\n",
+        "  text_feature_norm = text_features.norm(dim=-1, keepdim=True)\n",
+        "  text_features = text_features/text_feature_norm # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "  for epoch in range(num_epochs):\n",
+        "\n",
+        "    model.train()\n",
+        "    total_loss = 0\n",
+        "\n",
+        "    for image, target in tqdm(dataloader, desc=label):\n",
+        "\n",
+        "          target = torch.Tensor([contig_cat2idx[t.item()] for t in target]).long()\n",
+        "\n",
+        "          image = image.to(device).float()\n",
+        "          target = target.to(device)\n",
+        "\n",
+        "          # forward image through CLIP image encoder\n",
+        "          image_features = model.encode_image(image).float()\n",
+        "          # and normalize\n",
+        "          image_features_norm = image_features.norm(dim=-1, keepdim=True)\n",
+        "          image_features = image_features / image_features_norm # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "          # here cosine similarity between image and text features and keep the argmax for every row (every image)\n",
+        "          logits = image_features @ text_features.T\n",
+        "\n",
+        "          loss = criterion(logits, target)\n",
+        "          total_loss += loss.item()\n",
+        "\n",
+        "          # Backpropagation\n",
+        "          loss.backward()\n",
+        "          torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+        "          optimizer.step()\n",
+        "          optimizer.zero_grad()\n",
+        "\n",
+        "    print(f\"Epoch {epoch + 1}, Loss: {total_loss/ len(dataloader)}\")\n",
+        "\n",
+        "  return(model)\n",
         "\n",
         "\n",
-        "##############################################\n",
-        "\n",
-        "contig_cat2idx = {cat: idx for idx, cat in enumerate(categories)}\n",
-        "\n",
-        "text_inputs = clip.tokenize(\n",
-        "        [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]).to(device)\n",
-        "\n",
-        "text_features = model.encode_text(text_inputs).float()\n",
-        "# and here we normalize them (standard pratice with CLIP)\n",
-        "text_feature_norm = text_features.norm(dim=-1, keepdim=True)\n",
-        "text_features = text_features/text_feature_norm # per avere norma 1 per calcolare cosine similarity\n",
-        "\n",
-        "num_epochs= 1\n",
-        "\n",
-        "for epoch in range(num_epochs):\n",
-        "\n",
-        "  model.train()\n",
-        "  total_loss = 0\n",
-        "\n",
-        "  for image, target in tqdm(dataloader, desc=label):\n",
-        "\n",
-        "        target = torch.Tensor([contig_cat2idx[t.item()] for t in target]).long()\n",
-        "\n",
-        "        image = image.to(device).float()\n",
-        "        target = target.to(device)\n",
-        "\n",
-        "        # forward image through CLIP image encoder\n",
-        "        image_features = model.encode_image(image).float()\n",
-        "        # and normalize\n",
-        "        image_features_norm = image_features.norm(dim=-1, keepdim=True)\n",
-        "        image_features = image_features / image_features_norm # per avere norma 1 per calcolare cosine similarity\n",
-        "\n",
-        "        # here cosine similarity between image and text features and keep the argmax for every row (every image)\n",
-        "        logits = image_features @ text_features.T\n",
-        "\n",
-        "        loss = criterion(logits, target)\n",
-        "        total_loss += loss.item()\n",
-        "\n",
-        "        # Backpropagation\n",
-        "        loss.backward()\n",
-        "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
-        "        optimizer.step()\n",
-        "        optimizer.zero_grad()\n",
-        "\n",
-        "  print(f\"Epoch {epoch + 1}, Loss: {total_loss/ len(dataloader)}\")"
+        "model_ft_visual_layer = fine_tuning_linear_visual(model=model, dataset=train_base, categories=base_classes, batch_size=128, num_epochs=10, device=device, label=\"🧠 Fine-tuning training on Base Classes\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_accuracy = eval(model=model_ft_visual_layer, dataset=test_base, categories=base_classes, batch_size=128, device=device, label=\"🧠 Few-shot evaluation on Base Classes\")\n",
+        "novel_accuracy = eval(model=model_ft_visual_layer, dataset=test_novel, categories=novel_classes, batch_size=128, device=device, label=\"🧠 Zero-shot evaluation on Novel Classes\")"
+      ],
+      "metadata": {
+        "id": "5C__kptSjMyB",
+        "outputId": "dd50ae79-b5ac-4cc7-dda1-7e31b2d6ba8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "🧠 Few-shot evaluation on Base Classes: 100%|██████████| 20/20 [00:30<00:00,  1.54s/it]\n",
+            "🧠 Zero-shot evaluation on Novel Classes: 100%|██████████| 29/29 [00:44<00:00,  1.55s/it]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print()\n",
+        "print(f\"🔍 Base classes accuracy: {base_accuracy*100:.2f}%\")\n",
+        "print(f\"🔍 Novel classes accuracy: {novel_accuracy*100:.2f}%\")"
+      ],
+      "metadata": {
+        "id": "h1Xyn8_hldt5",
+        "outputId": "3053b7a5-1fd0-474c-fadb-e979e50f19a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "🔍 Base classes accuracy: 67.45%\n",
+            "🔍 Novel classes accuracy: 63.03%\n"
+          ]
+        }
       ]
     }
   ],
