Creato con Colab

--- a/CLIP_zero_shot.ipynb
+++ b/CLIP_zero_shot.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "UzXtFjhh7iOS",
         "colab": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "QtqdSOr8qqOn"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "M_1CrUhZpVCq"
       },
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "nfq51vd8q_5a"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "msOszMs2zRRu"
       },
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "TVrYUYTv9ttM"
       },
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -528,7 +528,7 @@
       "metadata": {
         "id": "6OA3pSfm8QFU"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +675,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,7 +1028,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "CfzZ1Es-MwF5",
         "collapsed": true,
@@ -1237,7 +1237,7 @@
         },
         "outputId": "04b32264-8156-43c1-cb11-eece01111142"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,6 +1264,153 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Using CLIP original loss"
+      ],
+      "metadata": {
+        "id": "mY4XTSFHxDyr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch.utils.data import DataLoader\n",
+        "from torch.optim import Adam\n",
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "temperature = 0.07\n",
+        "\n",
+        "def fine_tuning_linear_visual(model, train_dataset, val_dataset, categories, lr, batch_size, num_epochs, device):\n",
+        "\n",
+        "  train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
+        "  val_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
+        "\n",
+        "  model = model.float()\n",
+        "\n",
+        "  visual_projection = model.visual.proj\n",
+        "  text_projection = model.text_projection\n",
+        "\n",
+        "  # Freeze all parameters in the model\n",
+        "  for param in model.parameters():\n",
+        "      param.requires_grad = False\n",
+        "\n",
+        "  # Unfreeze the projection layer\n",
+        "  visual_projection.requires_grad = True\n",
+        "  #text_projection.requires_grad = True\n",
+        "\n",
+        "  criterion = torch.nn.CrossEntropyLoss()\n",
+        "  optimizer = Adam([visual_projection], lr=lr)\n",
+        "\n",
+        "  contig_cat2idx = {cat: idx for idx, cat in enumerate(categories)}\n",
+        "\n",
+        "\n",
+        "\n",
+        "  print(\"🧠 Fine-tuning training+validation on Base Classes\")\n",
+        "\n",
+        "  for epoch in range(num_epochs):\n",
+        "\n",
+        "    # Training of one epoch\n",
+        "\n",
+        "    model.train()\n",
+        "    # here we store the sum of all the computed losses through the all batches\n",
+        "    total_loss = 0\n",
+        "    # here we store the number of correct predictions we will make\n",
+        "    correct_predictions = 0\n",
+        "\n",
+        "    for image, target in tqdm(train_dataloader):\n",
+        "          text_inputs = clip.tokenize(\n",
+        "          [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in target]).to(device)\n",
+        "\n",
+        "          text_features = model.encode_text(text_inputs).float()\n",
+        "          # and here we normalize them (standard pratice with CLIP)\n",
+        "          text_feature_norm = text_features.norm(dim=-1, keepdim=True)\n",
+        "          text_features = text_features/text_feature_norm # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "          target = torch.Tensor([contig_cat2idx[t.item()] for t in target]).long()\n",
+        "          target = torch.argsort(torch.argsort(target))#create a vector that has integers betwee 0 and batch_size\n",
+        "          target = torch.arange(len(target))\n",
+        "\n",
+        "          image = image.to(device).float()\n",
+        "          target = target.to(device)\n",
+        "\n",
+        "          # forward image through CLIP image encoder\n",
+        "          image_features = model.encode_image(image).float()\n",
+        "          # and normalize\n",
+        "          image_features_norm = image_features.norm(dim=-1, keepdim=True)\n",
+        "          image_features = image_features / image_features_norm # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "          # here cosine similarity between image and text features and keep the argmax for every row (every image)\n",
+        "          logits = (image_features @ text_features.T)* torch.exp(torch.tensor([temperature]).to(device))\n",
+        "\n",
+        "          loss = (criterion(logits, target) +criterion(logits.T, target))/2\n",
+        "          total_loss += loss.item()\n",
+        "\n",
+        "          # Backpropagation\n",
+        "          loss.backward()\n",
+        "          torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+        "          optimizer.step()\n",
+        "          optimizer.zero_grad()\n",
+        "\n",
+        "          # Training accuracy computation\n",
+        "          predicted_class = logits.argmax(dim=-1)\n",
+        "          correct_predictions += (predicted_class == target).sum().item()\n",
+        "\n",
+        "    print(f\"Epoch {epoch + 1}, Training loss: {total_loss/ len(train_dataloader)}; Training accuracy: {correct_predictions / len(train_dataset)*100:.2f}%\")\n",
+        "    print()\n",
+        "\n",
+        "    # Validation of one epoch\n",
+        "\n",
+        "    model.eval()\n",
+        "    total_loss = 0\n",
+        "    correct_predictions = 0\n",
+        "\n",
+        "    for image, target in tqdm(val_dataloader):\n",
+        "          text_inputs = clip.tokenize(\n",
+        "          [f\"a photo of a {CLASS_NAMES[c]}, a type of flower.\" for c in categories]).to(device)\n",
+        "\n",
+        "          text_features = model.encode_text(text_inputs).float()\n",
+        "          # and here we normalize them (standard pratice with CLIP)\n",
+        "          text_feature_norm = text_features.norm(dim=-1, keepdim=True)\n",
+        "          text_features = text_features/text_feature_norm # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "          target = torch.Tensor([contig_cat2idx[t.item()] for t in target]).long()\n",
+        "\n",
+        "          image = image.to(device).float()\n",
+        "          target = target.to(device)\n",
+        "\n",
+        "          # forward image through CLIP image encoder\n",
+        "          image_features = model.encode_image(image).float()\n",
+        "          # and normalize\n",
+        "          image_features_norm = image_features.norm(dim=-1, keepdim=True)\n",
+        "          image_features = image_features / image_features_norm # per avere norma 1 per calcolare cosine similarity\n",
+        "\n",
+        "          # here cosine similarity between image and text features and keep the argmax for every row (every image)\n",
+        "          logits = image_features @ text_features.T\n",
+        "\n",
+        "          loss = criterion(logits, target)\n",
+        "          total_loss += loss.item()\n",
+        "\n",
+        "          # Validation accuracy computation\n",
+        "          predicted_class = logits.argmax(dim=-1)\n",
+        "          correct_predictions += (predicted_class == target).sum().item()\n",
+        "\n",
+        "    print(f\"Epoch {epoch + 1}, Validation loss: {total_loss/ len(val_dataloader)}; Validation accuracy: {correct_predictions / len(val_dataset)*100:.2f}%\")\n",
+        "    print()\n",
+        "    print(\"-----------------------------------------------------------------------------------------------\")\n",
+        "\n",
+        "  return(model)\n",
+        "\n",
+        "model, _ = clip.load(\"ViT-B/16\", device=device)\n",
+        "model_ft_visual_layer = fine_tuning_linear_visual(model=model, train_dataset=train_base, val_dataset=val_base, categories=base_classes, lr = 0.0001, batch_size=16, num_epochs=30, device=device)\n"
+      ],
+      "metadata": {
+        "id": "ZKAQ6HtQxBkn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
